# piphi_network-spi

./: README.md  pyproject.toml
src/: manifest.json
src/piphi_network_spi/: main.py  state.py
src/piphi_network_spi/routes/: commands.py  config.py  discovery.py  entities.py  events.py  health.py
src/piphi_network_spi/routes/piphi_network_spi/: app.py  lifecycle.py  sensors.py  state.py
src/piphi_network_spi/routes/piphi_network_spi/routes/: __init__.py  runtime.py  sensors.py
tests/: test_spi_routes_non_happy.py  test_spi_sensors.py
