[project]
name = "piphi-network-spi"
version = "0.1.0"
description = "PiPhi integration runtime for local SPI environmental sensors."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "piphi-runtime-kit-python==0.4.6",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
hardware = [
  "spidev>=3.6",
  "bme680 @ git+https://github.com/pimoroni/bme680-python.git",
  "bme280 @ git+https://github.com/pimoroni/bme280-python.git",
  "adafruit-circuitpython-bme280>=2.6.0",
  "adafruit-circuitpython-bme680>=3.7.0",
  "adafruit-blinka>=8.0.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
piphi_network_spi = "piphi_network_spi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piphi_network_spi"]
